Update to actually working

--- a/CosmosDBChangeFeedReader/CosmosDBChangeFeedReader.csproj
+++ b/CosmosDBChangeFeedReader/CosmosDBChangeFeedReader.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <UserSecretsId>9124E96B-FE70-405C-83EC-4A0A7733A91E</UserSecretsId>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
