--- a/CosmosDBChangeFeedReader/appsettings.json
+++ b/CosmosDBChangeFeedReader/appsettings.json
@@ -1,6 +1,14 @@
 {
-  "YourClassName":{
-    "Secret1":"** Set Me **",
-    "Secret2":"** Set Me **"
+  "UserCollectionDbSettings":{
+    "Uri" : "*** uri ***",
+    "AccountKey" : "*** auth key ***",
+    "DatabaseName" : "UserManagement",
+    "CollectionName" : "User"
+   },
+  "LeasesDbSettings":{
+    "Uri" : "*** uri ***",
+    "AccountKey" : "*** auth key ***",
+    "DatabaseName" : "Support",
+    "CollectionName" : "Leases"
    }
 }
