--- a/CosmosDBChangeFeedReader/appsettings.json
+++ b/CosmosDBChangeFeedReader/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "UserCollectionDbSettings":{
+  "UserDbSettings":{
     "Uri" : "*** uri ***",
     "AccountKey" : "*** auth key ***",
     "DatabaseName" : "UserManagement",
